modules/networking/vpc.tf
resource "aws_vpc" "my_vpc" {
  cidr_block       = var.cidr

  tags = {
    Name = "my_vpc"
  }
}

resource "aws_subnet" "public_subnet" {
  count                   = 2
  vpc_id                  = aws_vpc.my_vpc.id
  cidr_block              = cidrsubnet(aws_vpc.my_vpc.cidr_block, 8, count.index + 1) //  10.0.1.0/24,  10.0.2.0/24
  availability_zone       = element(var.azs, count.index)  
  map_public_ip_on_launch = true
    tags = {
    Name = format("pub-sub-%s", element(["1a","1b"], count.index))
  }
}

resource "aws_subnet" "private_subnet" {
  count             = 4
  vpc_id            = aws_vpc.my_vpc.id
  cidr_block        = cidrsubnet(aws_vpc.my_vpc.cidr_block, 8, count.index + 3)  //  10.0.3.0/24,  10.0.4.0/24 , 10.0.5.0/24 , 10.0.6.0/24
  availability_zone = element(var.azs, count.index)
    tags = {
    Name = format("prv-sub-%s", element(["1a","1b"], count.index))
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.my_vpc.id
  tags = { Name = "my_vpc_igw" }
}
resource "aws_route_table" "pbrtb" {
  vpc_id = aws_vpc.my_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = { Name = "pb-rt" }
}

resource "aws_route_table_association" "pbrtbassoc" {
  count          = 2
  subnet_id      = aws_subnet.public_subnet[count.index].id
  route_table_id = aws_route_table.pbrtb.id
}


resource "aws_eip" "nat_eip" {
  count = 1
}

resource "aws_nat_gateway" "ngw" {
  allocation_id = aws_eip.nat_eip[0].id
  subnet_id     = aws_subnet.public_subnet[0].id
  count         = 1
  tags = { Name = "my_ngw" }
}

resource "aws_route_table" "prvrtb" {
  vpc_id = aws_vpc.my_vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.ngw[0].id
  }
  tags = { Name = "prv-rt" }
}

resource "aws_route_table_association" "prvrtbassoc" {
  count          = 2
  subnet_id      = aws_subnet.private_subnet[count.index].id
  route_table_id = aws_route_table.pbrtb.id
}
